# CMake-Tutorial

./: .gitignore
00-Make/: Makefile  geom.cpp  util.cpp
01-Levels/: Makefile
01-Levels/src/: Makefile  geom.cpp  tip.cpp  util.hpp
02-Executables/: CMakeLists.txt  trim.cpp
03-Static-Libraries/: CMakeLists.txt
03-Static-Libraries/examples/: CMakeLists.txt
03-Static-Libraries/include/: CMakeLists.txt
03-Static-Libraries/include/geom/: point.hpp
03-Static-Libraries/src/: CMakeLists.txt  point.cpp
04-Reuse-Locally/: CMakeLists.txt  main.cpp
05-Reuse-Globally/: README.md  main.cpp
